<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail_restaurant.RestaurantDetailFragment"
    android:theme="@style/Theme.AppCompat.NoActionBar">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/image_restaurant"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/background_login"
            android:contentDescription="@string/restaurant_picture" />
        <LinearLayout
            android:id="@+id/name_address_container"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:layout_anchor="@id/image_restaurant"
            android:layout_below="@id/image_restaurant"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:padding="12dp"
            >

            <TextView
                android:id="@+id/name_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_restaurant_textview"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/address_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_address"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contact_info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_address_container"
            >
            <GridLayout
                android:id="@+id/buttons_layout"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="horizontal"
                android:alignmentMode="alignMargins"
                android:layout_margin="10dp"
                android:rowCount="1"
                android:columnCount="3"
                >
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    >
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white">
                        <LinearLayout
                            android:id="@+id/call_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_centerInParent="true"
                            tools:ignore="UseCompoundDrawables,UselessParent">
                            <ImageView
                                android:id="@+id/phone_number_imgview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:minHeight="24dp"
                                android:minWidth="24dp"
                                android:src="@drawable/ic_phone"
                                android:contentDescription="@string/call_textview" />
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/colorPrimary"
                                    android:textStyle="bold"
                                    android:text="@string/call_textview"/>

                        </LinearLayout>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    >
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white">
                        <LinearLayout
                            android:id="@+id/like_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_centerInParent="true"
                            tools:ignore="UseCompoundDrawables,UselessParent">
                            <ImageView
                                android:id="@+id/liked_imgview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:minHeight="24dp"
                                android:minWidth="24dp"
                                android:src="@drawable/ic_favorite_star_24"
                                android:contentDescription="@string/like_textview" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorPrimary"
                                android:textStyle="bold"
                                android:text="@string/like_textview"
                                />
                        </LinearLayout>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    >
                    <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                        android:background="@color/white">
                        <LinearLayout
                            android:id="@+id/website_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_centerInParent="true"
                            tools:ignore="UseCompoundDrawables,UselessParent">
                            <ImageView
                                android:id="@+id/website_imgview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:minHeight="24dp"
                                android:minWidth="24dp"
                                android:src="@drawable/ic_website"
                                android:contentDescription="@string/website_textview" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorPrimary"
                                android:textStyle="bold"
                                android:text="@string/website_textview"
                                />

                        </LinearLayout>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </GridLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/colleagues_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/colleague_item_list"
            android:layout_below="@id/contact_info_layout"/>
    </RelativeLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/is_today_chosen_rest_floating_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:layout_anchor="@+id/image_restaurant"
        app:layout_anchorGravity="end|bottom"
        android:contentDescription="@string/favorite"
        app:backgroundTint="@color/colorPrimary"
        app:srcCompat="@drawable/ic_selected_restaurant"
        tools:ignore="RelativeOverlap" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
